# B2G-GTM-Toolkit

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.agents/skills/spec-driven-development-sdd-1/: SKILL.md
.sdd/specs/001-b2g-gtm-toolkit/: data-model.md  plan.md  (+2 more)
demo/: meeting-prep.md  outreach-demo.md  proposal.md
docs/: agent-usage.md  non-technical-onboarding.md  ux-friction-log.md  workflows.md
examples/: business-profile.json  icp.json  opportunity.json  secop-research-input.json
schemas/: notion-workspace.schema.json  secop-research-input.schema.json  secop-research-output.schema.json
scripts/: install-claude-skills.ps1  install-codex-skills.ps1
skills/b2g-icp-workflow/: SKILL.md
skills/b2g-notion-gtm-os/: SKILL.md
skills/b2g-output-workflows/: SKILL.md
src/b2g_gtm_toolkit/: cli.py  config.py
tests/contract/: test_secop_output_schema.py
tests/fixtures/: target-accounts.sample.json
tests/integration/: test_mvp_smoke.py  test_notion_verify.py  test_output_workflow.py  test_research_to_notion.py
tests/unit/: test_cli_env.py  test_cli_output_notion.py  test_cli_secop_research_notion.py  test_icp_workflow_contract.py  test_ids.py  test_models.py  test_notion_dedupe_repair.py  test_notion_output_mapper.py  test_notion_read.py  test_notion_schema.py  test_notion_workflow_import.py  test_outputs.py  test_secop_research.py  test_signals.py  test_target_accounts.py
video-demo/: README.md  package-lock.json  package.json  production-prompts.md  storyboard.md
video-demo/src/: DemoVideo.tsx  Root.tsx  story.ts  styles.css
(+43 files in other folders)
