[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "b2g-gtm-toolkit"
version = "0.1.0"
description = "Toolkit B2G GTM para oportunidades del sector publico colombiano via SECOP."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "B2G GTM Toolkit" }]
dependencies = [
    "typer>=0.12",
    "pydantic>=2.6",
    "httpx>=0.27",
    "notion-client>=2.2",
    "python-dotenv>=1.0",
    "tenacity>=8.2",
    "jsonschema>=4.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
b2g-gtm = "b2g_gtm_toolkit.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/b2g_gtm_toolkit"]
